[package]
name = "superbasic"
version = "1.0.0"
authors = ["Salim Alam"]
description = "A BASIC emulator with easy access to a libary of classic games"
homepage = "https://github.com/sagudev/SuperBasic"
repository = "https://github.com/sagudev/SuperBasic"
license = "Apache-2.0"
keywords = ["emulator", "classic", "basic", "games"]
categories = ["emulators", "games"]

[dependencies]
clap = "2"
log = "0.3"
rand = "0.3"
dimsum = "0.1.0"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
futures = "0.1"
hyper = "0.13"
tokio-core = "0.1"
env_logger = "0.5.10"
